--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.4",
     "browser-sync": "^2.27.9",
+    "choices.js": "^10.2.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
@@ -33,7 +34,6 @@
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^4.1.0",
     "gulp-ttf2woff2": "^4.0.1",
-    "gulp-typograf": "^4.0.3",
     "gulp-uglify-es": "^3.0.0",
     "gulp-util": "^1.0.0",
     "gulp-webp": "^4.0.1",
